# PantherEyes

./: .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/actions/panthereyes-gate/: action.yml
.github/workflows/: ci.yml  publish-panthereyes-mcp.yml  release.yml
.panthereyes/: exceptions.yaml  policy.yaml  rules.yaml
SampleAndroid/android/: settings.gradle.kts
SampleAndroid/android/app/: build.gradle.kts  proguard-rules.pro
apps/agent-server/: package.json  tsconfig.json
apps/agent-server/src/: index.ts  logging.ts  runtime.ts  server.http-tools.test.ts  server.ts  types.ts
apps/vscode-extension/: .vscodeignore  README.md  package.json  tsconfig.json
crates/panthereyes-checks-mobile/: Cargo.toml
crates/panthereyes-checks-web/: Cargo.toml
crates/panthereyes-cli/: Cargo.toml  README.md
crates/panthereyes-cli/src/: lib.rs  main.rs
crates/panthereyes-core/: Cargo.toml
docs/: README.md  agent-usage-and-mcp-distribution.md  mcp-local-usage.md  mcp-tutorial-pt-br.md  project-status-and-pending.md  vscode-extension-local-packaging.md
docs/examples/: codex-vscode-mcp-npx.example.json  codex-vscode-mcp.example.json
sampleIOS/: Project.swift
sampleIOS/PantherEyesSampleIOS.xcodeproj/: project.pbxproj
sampleIOS/PantherEyesSampleIOS.xcworkspace/: contents.xcworkspacedata
samples/android-panthereyes-demo/: LAB.md
samples/ios-panthereyes-demo/: LAB.md  Project.swift
samples/shared-fixtures/: README.md
scripts/ci/: panthereyes-gate.sh
scripts/mcp/: panthereyes-mcp.sh
(+124 files in other folders)
