[workspace]
members = [
  "crates/panthereyes-cli",
  "crates/panthereyes-core",
  "crates/panthereyes-checks-mobile",
  "crates/panthereyes-checks-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["PantherEyes Contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
